--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -457,6 +457,7 @@ body, #headerwarp {
 #green19_78758 .centerSwiper .swiper-container .swiper-slide.content.swiper-slide-active {
   z-index: 1000;
   transform: scale(1.3);
+  width: 320px;
 }
 #green19_78758 .centerSwiper .swiper-container .swiper-slide.content.swiper-slide-active .des {
   max-width: 200px;
