--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -531,7 +531,8 @@ margin: -260px auto 0 -105px !important;
                         
                         &.swiper-slide-active{
                             z-index: 1000;
-                            transform: scale(1.3);         
+                            transform: scale(1.3); 
+                            width:320px;        
                             .des  {          
                                 max-width: 200px; 
                                
