--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -501,7 +501,7 @@ margin: -260px auto 0 -105px !important;
                             font-family:  "Noto Sans KR", sans-serif !important; 
                             display: flex;
                             flex-direction: column !important;
-                                         
+                            background-color: white;     
                             align-items: start;
                             white-space: nowrap;
                             justify-content: center;
@@ -513,12 +513,12 @@ margin: -260px auto 0 -105px !important;
                                 gap: 10px;  
                             }
 
-                            button {
+                            a {
                                 display: flex;
                                 flex-direction: column;
                                 white-space: pre-line;
                                 line-height: 1.3;
-                                width: 130px;
+                                width: 100px;
                                 height: 30px;
                                 border: 1px #558ccf solid;
                                 color: #558ccf;
