--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -442,18 +442,22 @@ body, #headerwarp {
   flex-direction: column;
   gap: 10px;
 }
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content .des div .text {
+  margin-bottom: -10px;
+}
 #green19_78758 .centerSwiper .swiper-container .swiper-slide.content .des a {
   display: flex;
   flex-direction: column;
   white-space: pre-line;
-  line-height: 1.3;
-  width: 100px;
-  height: 30px;
+  line-height: 1.6;
+  width: 9%;
+  height: 20px;
   border: 1px #558ccf solid;
   color: #558ccf;
   font-family: "Paperlogy 4" !important;
   font-weight: 400;
   background-color: white;
+  align-items: center;
 }
 #green19_78758 .centerSwiper .swiper-container .swiper-slide.content.swiper-slide-active {
   z-index: 1000;
