--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -511,20 +511,24 @@ margin: -260px auto 0 -105px !important;
                                 display: flex;
                                 flex-direction: column;
                                 gap: 10px;  
+                                .text{
+                                    margin-bottom: -10px;
+                                }
                             }
 
                             a {
                                 display: flex;
                                 flex-direction: column;
                                 white-space: pre-line;
-                                line-height: 1.3;
-                                width: 100px;
-                                height: 30px;
+                                line-height: 1.6;
+                                width: 9%;
+                                height: 20px;
                                 border: 1px #558ccf solid;
                                 color: #558ccf;
                                 font-family: "Paperlogy 4" !important;
                                 font-weight: 400;
                                 background-color: white;
+                                align-items: center;
                             }
                                 
                         } 
