[퀵버튼]이미지 크기 수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -750,12 +750,18 @@ body, #headerwarp {
   width: 30px !important;
   height: 44px !important;
 }
-
 #green19_82309 .quick-btn4 {
   background: var(--Color-4, #F9F1DE);
   border-radius: 25.414px;
   border: none;
   padding: 3px;
+}
+#green19_82309 .quick-top_num1 .img {
+  width: 40px;
+  height: 25px;
+}
+#green19_82309 .quick-top_num2 .img {
+  width: 35px;
 }
 
 #green19_82681 {
