[퀵버튼]이미지 재 수정

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -880,13 +880,13 @@ margin: -260px auto 0 -105px !important;
     .quick-top_num1 {
       .img {
         width: 40px !important;
-        height: 25px;
+        height: 25px !important;
       }
     }
   
     .quick-top_num2 {
       .img {
-        width: 35px;
+        width: 35px !important;
       }
     }
   }
