--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -758,10 +758,10 @@ body, #headerwarp {
 }
 #green19_82309 .quick-top_num1 .img {
   width: 40px !important;
-  height: 25px;
+  height: 25px !important;
 }
 #green19_82309 .quick-top_num2 .img {
-  width: 35px;
+  width: 35px !important;
 }
 
 #green19_82681 {
