[퀵버튼]이미지 조정3

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -756,11 +756,11 @@ body, #headerwarp {
   border: none;
   padding: 3px;
 }
-#green19_82309 .quick-top_num1 .img {
+#green19_82309 .quick-menu .quick-top_num1 .quick-img .img {
   width: 40px !important;
   height: 25px !important;
 }
-#green19_82309 .quick-top_num2 .img {
+#green19_82309 .quick-menu .quick-top_num2 .quick-img .img {
   width: 35px !important;
 }
 
