[퀵버튼]이미지 조정4

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -876,7 +876,7 @@ margin: -260px auto 0 -105px !important;
       border: none;
       padding: 3px;
     }
-    
+
   .quick-menu{
     .quick-top_num1 {
         .quick-img{
@@ -900,6 +900,10 @@ margin: -260px auto 0 -105px !important;
  
   }
   
+  #green19_82309 .quick-menu .quick-top_num1 .quick-img img{
+    width: 40px !important;
+                height: 25px !important;
+  }
 
 
 //지도//
