--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -764,6 +764,11 @@ body, #headerwarp {
   width: 35px !important;
 }
 
+#green19_82309 .quick-menu .quick-top_num1 .quick-img img {
+  width: 40px !important;
+  height: 25px !important;
+}
+
 #green19_82681 {
   display: flex;
   height: 824px;
