--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -756,17 +756,12 @@ body, #headerwarp {
   border: none;
   padding: 3px;
 }
-#green19_82309 .quick-menu .quick-top_num1 .quick-img .img {
-  width: 40px !important;
-  height: 25px !important;
-}
-#green19_82309 .quick-menu .quick-top_num2 .quick-img .img {
-  width: 35px !important;
-}
-
 #green19_82309 .quick-menu .quick-top_num1 .quick-img img {
   width: 40px !important;
   height: 25px !important;
+}
+#green19_82309 .quick-menu .quick-top_num2 .quick-img img {
+  width: 35px !important;
 }
 
 #green19_82681 {
