--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -876,34 +876,27 @@ margin: -260px auto 0 -105px !important;
       border: none;
       padding: 3px;
     }
-
-  .quick-menu{
-    .quick-top_num1 {
-        .quick-img{
-            .img {
-                width: 40px !important;
-                height: 25px !important;
-              }
+  
+    .quick-menu {
+      .quick-top_num1 {
+        .quick-img {
+          img {
+            width: 40px !important;
+            height: 25px !important;
+          }
         }
-        
       }
-    
+  
       .quick-top_num2 {
-        .quick-img{
-            .img {
-                width: 35px !important;
-              }
+        .quick-img {
+          img {
+            width: 35px !important;
+          }
         }
-       
-        }
-}
- 
+      }
+    }
   }
   
-  #green19_82309 .quick-menu .quick-top_num1 .quick-img img{
-    width: 40px !important;
-                height: 25px !important;
-  }
 
 
 //지도//
