--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -791,9 +791,31 @@ body, #headerwarp {
   line-height: normal;
 }
 #green19_82681 .map_text .map_text_logo {
-  width: 386px;
-  height: 85px;
-  padding: 0px 4.885px 0.366px 0px;
+  width: 390px;
+  height: 100px;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo1 {
+  font-family: "Paperlogy 7";
+  font-weight: 700;
+  color: #F17522;
+  border-right: 2px solid #ccc;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo1 img {
+  margin-left: 12px;
+  margin-bottom: -7px;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo1 .tele_text1 {
+  margin-left: 10px;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo2 {
+  font-family: "Paperlogy 7";
+  font-weight: 700;
+  margin-left: 12px;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo2 img {
+  margin-bottom: -19px;
 }
 
 #gNavi.gNavi > ul > li#gNaviNum0:hover {
