--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -926,10 +926,35 @@ margin: -260px auto 0 -105px !important;
             line-height: normal; 
         }
         .map_text_logo{
-            width: 386px;
-            height: 85px;
-            padding:0px 4.885px 0.366px 0px;
+            width: 390px;
+            height: 100px;
+            border-bottom: 2px solid #ccc;
+            padding-bottom: 10px;
+            
+            .map_text_logo1{
+                font-family: "Paperlogy 7";
+                font-weight: 700;
+                color: #F17522;
+                border-right: 2px solid #ccc;
+                img{
+                    margin-left: 12px;
+                    margin-bottom: -7px;
+                }
+                .tele_text1 {
+                    margin-left: 10px;
+                }
+
+            }
+            .map_text_logo2{
+                font-family: "Paperlogy 7";
+                font-weight: 700;
+                margin-left: 12px;
+                img{
+                    margin-bottom: -19px;
+                }
+            }
         }
+        
     }
 }
 
