--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -799,7 +799,6 @@ body, #headerwarp {
 #green19_82681 .map_text .map_text_logo .map_text_logo1 {
   font-family: "Paperlogy 7";
   font-weight: 700;
-  color: #F17522;
   border-right: 2px solid #ccc;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo1 img {
@@ -808,6 +807,10 @@ body, #headerwarp {
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo1 .tele_text1 {
   margin-left: 10px;
+  color: #F17522 !important;
+}
+#green19_82681 .map_text .map_text_logo .map_text_logo1 .tele_text2 {
+  color: #F17522 !important;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo2 {
   font-family: "Paperlogy 7";
