--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -934,7 +934,7 @@ margin: -260px auto 0 -105px !important;
             .map_text_logo1{
                 font-family: "Paperlogy 7";
                 font-weight: 700;
-                color: #F17522;
+                
                 border-right: 2px solid #ccc;
                 img{
                     margin-left: 12px;
@@ -942,6 +942,10 @@ margin: -260px auto 0 -105px !important;
                 }
                 .tele_text1 {
                     margin-left: 10px;
+                    color: #F17522 !important;
+                }
+                .tele_text2 {
+                    color: #F17522 !important;
                 }
 
             }
