--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -786,15 +786,18 @@ body, #headerwarp {
 }
 #green19_82681 .map_text span {
   color: #000000;
-  font-family: "Paperlogy 5 Medium" !important;
+  font-family: "Paperlogy 4" !important;
   font-style: normal;
   line-height: normal;
+  font-weight: 400;
+}
+#green19_82681 .map_text .map_text_time {
+  margin-top: -21px;
 }
 #green19_82681 .map_text .map_text_logo {
   width: 390px;
   height: 100px;
   border-bottom: 2px solid #ccc;
-  padding-bottom: 10px;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo1 {
   font-family: "Paperlogy 7";
