--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -921,15 +921,19 @@ margin: -260px auto 0 -105px !important;
 
         span{
             color: #000000;
-            font-family: "Paperlogy 5 Medium" !important;
+            font-family: "Paperlogy 4" !important;
             font-style: normal;
             line-height: normal; 
+            font-weight: 400;
+        }
+        .map_text_time{
+            margin-top: -21px;
         }
         .map_text_logo{
             width: 390px;
             height: 100px;
             border-bottom: 2px solid #ccc;
-            padding-bottom: 10px;
+          
             
             .map_text_logo1{
                 font-family: "Paperlogy 7";
