[푸터]글자 수정2

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -800,19 +800,19 @@ body, #headerwarp {
   border-bottom: 2px solid #ccc;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo1 {
-  font-family: "Paperlogy 7";
-  font-weight: 700;
+  font-family: "Paperlogy 7" !important;
+  font-weight: 700 !important;
   border-right: 2px solid #ccc;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo1 img {
   margin-left: 12px;
   margin-bottom: -7px;
 }
-#green19_82681 .map_text .map_text_logo .map_text_logo1 .tele_text1 {
+#green19_82681 .map_text .map_text_logo .map_text_logo1 span .tele_text1 {
   margin-left: 10px;
   color: #F17522 !important;
 }
-#green19_82681 .map_text .map_text_logo .map_text_logo1 .tele_text2 {
+#green19_82681 .map_text .map_text_logo .map_text_logo1 span .tele_text2 {
   color: #F17522 !important;
 }
 #green19_82681 .map_text .map_text_logo .map_text_logo2 {
