--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -833,6 +833,26 @@ body, #headerwarp {
   font-family: "Paperlogy 7";
   font-weight: 700;
 }
+#green19_82681 .websitego {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+}
+#green19_82681 .websitego a {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  background-color: white;
+  border: 2px solid skyblue;
+  border-radius: 50px;
+  color: #333;
+  font-weight: bold;
+  justify-content: center;
+}
 
 #gNavi.gNavi > ul > li#gNaviNum0:hover {
   background-color: #558ccf;
