--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -987,12 +987,13 @@ margin: -260px auto 0 -105px !important;
       justify-content: center;
       align-items: center;
       gap: 28px;
+      margin-top: 41px;
       a{
-        width: 200px;
-        height: 50px;
+        width: 360px;
+        height: 58px;
         display: flex;
         align-items: center;
-        gap:5px;
+        gap:20px;
         text-decoration:none;
         background-color: white;
         border:2px solid skyblue;
@@ -1000,6 +1001,8 @@ margin: -260px auto 0 -105px !important;
         color: #333;
         font-weight: bold;
         justify-content: center;
+        font-family: "Paperlogy 5";
+        font-weight: 500;
       }
      }
   }
